...
    <string name="movies_grid_view_action">Grid</string>
    <string name="movies_list_view_action">List</string>
    <string name="movie_saved_successfully_with_title">%1$s saved ;)</string>
    <string name="deleted_movie_with_title">%1$s deleted</string>
    <string name="search_movie_on_web_hint">Search movie on web&#8230;</string>
    <string name="problem_message">Houston we have a problem!</string>
    <string name="no_network_connection">No Internet Connection</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
...
